# escala-grises-paralela-version-grafica

./: CMakeLists.txt  escala_gris_openmp.cpp  escala_gris_openmp.h  escala_gris_serial.cpp  escala_gris_serial.h  main.cpp  op_simd.cpp  op_simd.h  plantilla.txt
